logs/ewa.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ewa'...
Compiling './lib/python3.5/site-packages/ewa/audio.py'...
***   File "./lib/python3.5/site-packages/ewa/audio.py", line 103
    except (InvalidAudioFormatException, TagException), exc:
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ewa/clisupport.py'...
***   File "./lib/python3.5/site-packages/ewa/clisupport.py", line 264
    print VERSION_TEXT % path.basename(sys.argv[0])
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ewa/config.py'...
***   File "./lib/python3.5/site-packages/ewa/config.py", line 23
    exec codeobj in {}, env
               ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/ewa/logutil.py'...
***   File "./lib/python3.5/site-packages/ewa/logutil.py", line 42
    raise ValueError, "illegal value for logrotate: %s" % rotate
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ewa/mp3.py'...
***   File "./lib/python3.5/site-packages/ewa/mp3.py", line 77
    raise ValueError, msg % (fields[idx],
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ewa/ply'...
Compiling './lib/python3.5/site-packages/ewa/ply/cpp.py'...
***   File "./lib/python3.5/site-packages/ewa/ply/cpp.py", line 196
    print "Couldn't determine identifier type"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ewa/ruleparser.py'...
***   File "./lib/python3.5/site-packages/ewa/ruleparser.py", line 536
    print tok
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ewa/rules.py'...
***   File "./lib/python3.5/site-packages/ewa/rules.py", line 325
    exec codeobj in {}, env
               ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/ewa-0.62.8.egg-info'...
Listing './lib/python3.5/site-packages/eyeD3-0.8.4.dist-info'...
Listing './lib/python3.5/site-packages/eyed3'...
Listing './lib/python3.5/site-packages/eyed3/id3'...
Listing './lib/python3.5/site-packages/eyed3/mp3'...
Listing './lib/python3.5/site-packages/eyed3/plugins'...
Listing './lib/python3.5/site-packages/eyed3/utils'...
Listing './lib/python3.5/site-packages/pathlib-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_magic-0.4.15.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
